<resources>
    <string name="app_name">Taxi</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="log_in">Log in</string>
    <string name="log_in_FB">Log in with facebook</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="sgin_up_FB">Connect with facebook</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main22">Main22Activity</string>
    <string name="title_activity_map">Map</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
